--- a/src/main/resources/application-pro.yml
+++ b/src/main/resources/application-pro.yml
@@ -3,5 +3,5 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: gasgja
     url: jdbc:mysql://localhost:3306/gasgja?serverTimezone=GMT%2b8
-    password: "mgvZWQgxsdsa"
+    password: mgvZWQgxsdsa
     type: com.alibaba.druid.pool.DruidDataSource
