--- a/pom.xml
+++ b/pom.xml
@@ -8,9 +8,9 @@
         <version>2.7.2</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>com.example</groupId>
+    <groupId>com.yanshang</groupId>
     <artifactId>watch-pro</artifactId>
-    <version>0.1.0</version>
+    <version>1.1.7</version>
     <name>watch-pro</name>
     <description>watch-pro</description>
     <properties>
