--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,7 +1,7 @@
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    username: gasgja
-    url: jdbc:mysql://localhost:3306/gasgja?serverTimezone=GMT%2b8
-    password: mgvZWQgxsdsa
+    username: root
+    url: jdbc:mysql://localhost:3306/watch_pro?serverTimezone=GMT%2b8
+    password: 123456
     type: com.alibaba.druid.pool.DruidDataSource
