--- a/src/main/resources/application-pro.yml
+++ b/src/main/resources/application-pro.yml
@@ -1,16 +1,6 @@
-<<<<<<< HEAD
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    username: gasgja
-    url: jdbc:mysql://localhost:3306/gasgja?serverTimezone=GMT%2b8
-    password: mgvZWQgxsdsa
-=======
-spring:
-  datasource:
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    username: gasgja
-    url: jdbc:mysql://localhost:3306/gasgja?serverTimezone=GMT%2b8
-    password: mgvZWQgxsdsa
->>>>>>> 849a8697ec423f3accd259ae7353f77a1982a52c
-    type: com.alibaba.druid.pool.DruidDataSource
+    username: root
+    url: jdbc:mysql://localhost:3306/look?serverTimezone=GMT%2b8
+    password: 123456
